TrainX-ElasticAPI/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainer-es
  namespace: mmenke
  labels:
    app: trainer-es
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: trainer-es
  template:
    metadata:
      labels:
        app: trainer-es
    spec:
      containers:
      - env:
        - name: ES_HOST
          value: elasticsearch
        - name: FLASK_ENV
          value: local
        - name: PORT
          value: "5000"
        image: registry.datexis.com/mmenke/elastictrainer:v0.39
        name: trainer-es
        ports:
          - name: client-port
            containerPort: 5000
        resources:
            requests:
              cpu: "0.3"
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 16Gi
        volumeMounts:
        - mountPath: "/app/api/elastictrainer/src"
          name: umls-persistent
      restartPolicy: Always
      imagePullSecrets:
        - name:  private-registry-auth
      # init container
      initContainers:
      - name: install
        image: busybox
        volumeMounts:
        - name: umls-persistent
          mountPath: "/app/api/elastictrainer/src"
      volumes:
      - name: umls-persistent
        persistentVolumeClaim:
          claimName: umls-persistent
