TrainX-ElasticAPI/k8s/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: mmenke
spec:
  ports:
  - name: "9200"
    port: 9200
    targetPort: 9200
  selector:
    app: elasticsearch
