TrainX-ElasticAPI/k8s/ingress.yaml
{
  "kind": "Ingress",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "trainer-es-ingress",
    "namespace": "mmenke",
    "selfLink": "/apis/extensions/v1beta1/namespaces/mmenke/ingresses/trainer-es-ingress",
    "uid": "dd239170-966a-4fd9-83be-510390420f0d",
    "resourceVersion": "246645184",
    "generation": 2,
    "creationTimestamp": "2020-05-11T16:21:26Z",
    "annotations": {
      "cert-manager.io/cluster-issuer": "letsencrypt",
      "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"extensions/v1beta1\",\"kind\":\"Ingress\",\"metadata\":{\"annotations\":{\"cert-manager.io/cluster-issuer\":\"letsencrypt\",\"kubernetes.io/ingress.class\":\"nginx\",\"nginx.ingress.kubernetes.io/auth-realm\":\"authentication required\",\"nginx.ingress.kubernetes.io/auth-secret\":\"trainer\",\"nginx.ingress.kubernetes.io/auth-type\":\"basic\",\"nginx.ingress.kubernetes.io/enable-cors\":\"true\"},\"creationTimestamp\":\" [...]
      "kubernetes.io/ingress.class": "nginx",
      "nginx.ingress.kubernetes.io/auth-realm": "authentication required",
      "nginx.ingress.kubernetes.io/auth-secret": "trainer",
      "nginx.ingress.kubernetes.io/auth-type": "basic",
      "nginx.ingress.kubernetes.io/enable-cors": "true"
    }
  },
  "spec": {
    "tls": [
      {
        "hosts": [
          "trainer-es.demo.datexis.com"
        ],
        "secretName": "trainer-es-demo"
      }
    ],
    "rules": [
      {
        "host": "trainer-es.demo.datexis.com",
        "http": {
          "paths": [
            {
              "path": "/",
              "backend": {
                "serviceName": "trainer-es-service",
                "servicePort": 5000
              }
            }
          ]
        }
      }
    ]
  },
  "status": {
    "loadBalancer": {}
  }
}
