TrainX-ElasticAPI/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trainer-es-service
  namespace: mmenke
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: trainer-es
